Training docs/Assignment8/Trial/src/objects/Case.object
<CustomObject>
	<fields>
		<fullName>EngineeringReqNumber__c</fullName>
		<label>Engineering Req Number</label>
		<length>12</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>PotentialLiability__c</fullName>
		<label>Potential Liability</label>
		<picklist>
			<picklistValues>
				<fullName>No</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yes</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Product__c</fullName>
		<label>Product</label>
		<picklist>
			<picklistValues>
				<fullName>GC1040</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>GC1060</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>GC3020</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>GC3040</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>GC3060</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>GC5020</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>GC5040</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>GC5060</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>GC1020</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>SLAViolation__c</fullName>
		<label>SLA Violation</label>
		<picklist>
			<picklistValues>
				<fullName>No</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yes</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<listViews>
		<fullName>AllClosedCases</fullName>
		<columns>CASES.CASE_NUMBER</columns>
		<columns>NAME</columns>
		<columns>CASES.SUBJECT</columns>
		<columns>CASES.STATUS</columns>
		<columns>CASES.PRIORITY</columns>
		<columns>CASES.CREATED_DATE</columns>
		<columns>CORE.USERS.ALIAS</columns>
		<filterScope>Everything</filterScope>
		<filters>
			<field>CASES.CLOSED</field>
			<operation>equals</operation>
			<value>1</value>
		</filters>
		<label>All Closed Cases</label>
	</listViews>
	<listViews>
		<fullName>AllOpenCases</fullName>
		<filterScope>Everything</filterScope>
		<filters>
			<field>CASES.CLOSED</field>
			<operation>equals</operation>
			<value>0</value>
		</filters>
		<label>All Open Cases</label>
	</listViews>
	<listViews>
		<fullName>CaseQueue_Case</fullName>
		<filterScope>Queue</filterScope>
		<label>CaseQueue</label>
		<queue>CaseQueue</queue>
		<sharedTo>
			<allInternalUsers></allInternalUsers>
		</sharedTo>
	</listViews>
	<listViews>
		<fullName>MyCases</fullName>
		<filterScope>Mine</filterScope>
		<label>My Cases</label>
	</listViews>
	<listViews>
		<fullName>MyOpenCases</fullName>
		<filterScope>Mine</filterScope>
		<filters>
			<field>CASES.CLOSED</field>
			<operation>equals</operation>
			<value>0</value>
		</filters>
		<label>My Open Cases</label>
	</listViews>
	<sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>